# SkillSwap-Solana-Dapp

./: .env  LICENSE  README.md  command.sh  docker-compose.yaml  package.json
config/: env.js
contracts/: solana-dockerfile
contracts/programs/skillswap/: Cargo.toml
contracts/programs/skillswap/src/: lib.rs
controllers/: userController.js
middlewares/: authMiddleware.js
migrations/: 20230627001_initial_migration.js  20230627002_add_nft_schema.js  20240101000000_create_users_table.js
models/: User.js
programs/skillswap/src/: error.rs  event.rs  instruction.rs  lib.rs  state.rs
routes/: apiRoutes.js
scripts/: build.js  deploy.js  generate_api_docs.sh  run_tests.sh  start.js
server/: backend-dockerfile  package.json
server/config/: default.json  production.json
server/controllers/: authController.js  marketplaceController.js  nftController.js
server/middlewares/: authMiddleware.js  errorMiddleware.js  loggerMiddleware.js
server/models/: Nft.js  Transaction.js  User.js
server/routes/: marketplaceRoutes.js  nftRoutes.js
server/services/: authService.js  marketplaceService.js  nftService.js
server/utils/: jwt.js  validateRequest.js
services/: userService.js
src/: App.js  package.json
